--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ nav {
 
 #scroll-wrapper {
     height: 100vh;
+    height: 100dvh;
     width: 100vw;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
