--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .big-text {
     color: #000000;
     font-weight: 900;
-    font-size: clamp(80px, 20vw, 300px);
+    font-size: clamp(80px, 10vw, 300px);
     margin: 0;
 }
 
@@ -62,7 +62,8 @@ body {
     gap: 5%;
 }
 
-@media (max-width: 1500px){
+/*Screen widths of 1500px and below*/
+@media (max-width: 1500px) {
     #intro{
         flex-direction: column;
         align-items: start;
@@ -156,7 +157,7 @@ nav {
 
 .projects{
     overflow: hidden;
-    padding-bottom: clamp(120px, 15vh, 150px);;
+    padding-bottom: clamp(120px, 15vw, 150px);;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -238,8 +239,10 @@ nav {
 
 #dev-details{
     width: 35ch;
+    max-width: 80vw;
+    max-width: 80dvw;
     margin-inline: auto;
-    border-radius: 32px;
+    border-radius: 10px;
     background-color: #b0b0b01a;
     padding: 20px;
     backdrop-filter: blur(2px);
