--- a/style.css
+++ b/style.css
@@ -60,21 +60,10 @@ body {
     align-items: center;
     padding-inline: 5%;
     gap: 5%;
-}
 
-/*Screen widths of 1500px and below*/
-@media (max-width: 1500px) {
-    #intro{
-        flex-direction: column;
-        align-items: start;
-        justify-content: center;
-    }
-
-    #dev-details{
-        margin: 0 !important;
-        position: relative !important;
-        right: 0 !important;
-    }
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
 }
 
 #hello-world {
@@ -257,8 +246,6 @@ nav {
     max-width: 35ch;
     width: 90vw;
     width: 90dvw;
-    position: absolute;
-    right: 25%;
     border-radius: 10px;
     background-color: #b0b0b01a;
     padding: 20px;
@@ -288,4 +275,45 @@ nav {
 
 .box-shadow{
     box-shadow: rgb(255, 255, 255) 0px 0px 0px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
+}
+
+#saturation-layer{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: saturation;
+    
+    background: linear-gradient(to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 40%,
+    rgba(255, 255, 255, 1) 50%, /* Adjust opacity for saturation intensity */
+    rgba(255, 255, 255, 0) 60%,
+    rgba(255, 255, 255, 0) 100%);
+    
+    animation-name: saturationStrobe;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes saturationStrobe {
+    to{
+        opacity: 0.1;
+    }
+}
+
+@media (max-height: 500px){
+    #intro{
+        flex-direction: row; 
+        align-items: center;
+        justify-content: space-evenly;
+        box-sizing: border-box;
+    }
+
+    nav{
+        padding-bottom: 15px;
+    }
 }
