--- a/style.css
+++ b/style.css
@@ -196,6 +196,10 @@ nav {
     h2{
         margin-bottom: 10px;
     }
+
+    p{
+        overflow-y: scroll;
+    }
 }
 
 .project.active .project-details {
