--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ nav {
     max-height: 500px;
     display: flex;
     gap: 30px;
+    padding-right: 30px;
 }
 
 .project {
@@ -235,11 +236,12 @@ nav {
     top: 10px;
     right: 10px;
     z-index: 1;
+    filter: drop-shadow(2px 4px 6px black);
 }
 
 .info-icon:hover{
     cursor: pointer;
-    filter: drop-shadow(2px 4px 6px black);
+    filter: drop-shadow(2px 4px 4px black);
 }
 
 .project-links{
